--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ body {
   color: #A6DED8;
 }
 
+#description{
+  font-size: 17px;
+  font-weight: bold;
+  color: #BCCFFA;
+}
+
 img{
   width: 25px;
   border-radius: 50%;
